Settings WebUI: use friendly protocol name in UI when a friendly name is available

Bug: 736217
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ie8e661305b9135ef3ccba5fd52b6053467c695c2
Reviewed-on: https://chromium-review.googlesource.com/991202
Reviewed-by: Lei Zhang <thestig@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547883}
Former-commit-id: ed90af462bd60a0ef1d13948f20d4d21e5f49968