chrome/browser/custom_handlers/register_protocol_handler_permission_request.cc
@@ -12,19 +12,6 @@
 #include "components/vector_icons/vector_icons.h"
 #include "ui/base/l10n/l10n_util.h"
 
-namespace {
-
-base::string16 GetProtocolName(
-    const ProtocolHandler& handler) {
-  if (handler.protocol() == "mailto")
-    return l10n_util::GetStringUTF16(IDS_REGISTER_PROTOCOL_HANDLER_MAILTO_NAME);
-  if (handler.protocol() == "webcal")
-    return l10n_util::GetStringUTF16(IDS_REGISTER_PROTOCOL_HANDLER_WEBCAL_NAME);
-  return base::UTF8ToUTF16(handler.protocol());
-}
-
-}  // namespace
-
 RegisterProtocolHandlerPermissionRequest
 ::RegisterProtocolHandlerPermissionRequest(
       ProtocolHandlerRegistry* registry,
@@ -46,14 +33,14 @@ PermissionRequest::IconId RegisterProtocolHandlerPermissionRequest::GetIconId()
 base::string16
 RegisterProtocolHandlerPermissionRequest::GetMessageTextFragment() const {
   ProtocolHandler old_handler = registry_->GetHandlerFor(handler_.protocol());
-  return old_handler.IsEmpty() ?
-      l10n_util::GetStringFUTF16(
-          IDS_REGISTER_PROTOCOL_HANDLER_CONFIRM_FRAGMENT,
-          GetProtocolName(handler_)) :
-      l10n_util::GetStringFUTF16(
-          IDS_REGISTER_PROTOCOL_HANDLER_CONFIRM_REPLACE_FRAGMENT,
-          GetProtocolName(handler_),
-          base::UTF8ToUTF16(old_handler.url().host_piece()));
+  return old_handler.IsEmpty()
+             ? l10n_util::GetStringFUTF16(
+                   IDS_REGISTER_PROTOCOL_HANDLER_CONFIRM_FRAGMENT,
+                   handler_.GetProtocolDisplayName())
+             : l10n_util::GetStringFUTF16(
+                   IDS_REGISTER_PROTOCOL_HANDLER_CONFIRM_REPLACE_FRAGMENT,
+                   handler_.GetProtocolDisplayName(),
+                   base::UTF8ToUTF16(old_handler.url().host_piece()));
 }
 
 GURL RegisterProtocolHandlerPermissionRequest::GetOrigin() const {
