chrome/common/custom_handlers/protocol_handler.h
@@ -45,6 +45,14 @@ class ProtocolHandler {
   // Encodes this protocol handler as a DictionaryValue.
   std::unique_ptr<base::DictionaryValue> Encode() const;
 
+  // Returns a friendly name for |protocol| if one is available, otherwise
+  // this function returns |protocol|.
+  static base::string16 GetProtocolDisplayName(const std::string& protocol);
+
+  // Returns a friendly name for |this.protocol_| if one is available, otherwise
+  // this function returns |this.protocol_|.
+  base::string16 GetProtocolDisplayName() const;
+
   const std::string& protocol() const { return protocol_; }
   const GURL& url() const { return url_;}
 
