chrome/test/data/webui/settings/protocol_handlers_tests.js
@@ -20,6 +20,7 @@ suite('ProtocolHandlers', function() {
       handlers: [{
         host: 'www.google.com',
         protocol: 'mailto',
+        protocol_name: 'email',
         spec: 'http://www.google.com/%s',
         is_default: true
       }],
@@ -30,12 +31,14 @@ suite('ProtocolHandlers', function() {
         {
           host: 'www.google1.com',
           protocol: 'webcal',
+          protocol_name: 'web calendar',
           spec: 'http://www.google1.com/%s',
           is_default: true
         },
         {
           host: 'www.google2.com',
           protocol: 'webcal',
+          protocol_name: 'web calendar',
           spec: 'http://www.google2.com/%s',
           is_default: false
         }
@@ -51,6 +54,7 @@ suite('ProtocolHandlers', function() {
   const ignoredProtocols = [{
     host: 'www.google.com',
     protocol: 'web+ignored',
+    protocol_name: 'web+ignored',
     spec: 'https://www.google.com/search?q=ignored+%s',
     is_default: false
   }];
